--- a/projekt/backend/frontend/src/App.css
+++ b/projekt/backend/frontend/src/App.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
 .App {
   text-align: center;
 }
@@ -8,7 +9,7 @@ html,body,ul,ol {
 }
 
 html,body {
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   color: #333;
   background: #f5f5f5;
   height:100%;
