--- a/projekt/backend/frontend/src/App.css
+++ b/projekt/backend/frontend/src/App.css
@@ -301,7 +301,7 @@ p{
 .headersButtonGreeting{
   display:inline-block;
   margin-left: 30vw;
-  font-size: 20px;;
+  font-size: 20px;
 }
 .headersButtonGreeting span{
   color:rgb(223, 78, 78);
